--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
                 <div class="overlay" id="overlay3">
                     <div class="reveal-img-container">
-                        <img class="image" src="media/final_painting.jpg" alt="Final Painting" />
+                        <img class="image" src="media/final_painting.JPG" alt="Final Painting" />
                         <img class="top-image" src="media/final_painting.JPG" alt="Sketch" />
                         <canvas class="mask-canvas" id="mask3"></canvas>
                         <div class="overlay-text">Unveil the masterpiece...</div>
@@ -643,7 +643,7 @@
                                 techniques and insights.</p>
                         </div>
                         <div class="crew-member">
-                            <img src="media/final_painting.jpg" alt="Final Painting" class="final-painting">
+                            <img src="media/final_painting.JPG" alt="Final Painting" class="final-painting">
                             <h3>The Final Masterpiece</h3>
                             <p class="role">Artwork</p>
                             <p>The culmination of artistic vision and technical expertise, representing the journey from
